src/test/deca/context/invalid/SansObjet/DeclVar-NE-int-int-int.deca
// Description:
//    Declaration of a int variable using != operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    int y = 17; 
    int z = x != y ; 
}
